<resources>
    <string name="app_name">LoftMoney</string>
    <string name="edittext_name_hint">Title</string>
    <string name="edittext_price_hint">Price</string>
    <string name="add_button_title">Add</string>

    <string name="price_with_currency">%1$s $</string>
    <string name="expences">Expences</string>
    <string name="incomes">Incomes</string>
    <string name="activity_main_toolbar_title">Budget Accounting</string>
    <string name="enter">Enter</string>
    <string name="selected">Selected: %1$s</string>
    <string name="remove">Remove</string>
    <string name="confirmation">Are you really want to delete selected items?</string>
    <string name="balance">Balance</string>
    <string name="expence">Expences</string>
    <string name="income">Incomes</string>
    <string name="finances">Available finance</string>
</resources>
