<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_button"
        android:orientation="vertical"
        android:paddingStart="33dp"
        android:paddingEnd="104dp"
        android:layout_marginBottom="61dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:lineSpacingExtra="0sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_price_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:lineSpacingExtra="0sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_title"
        android:enabled="false"
        android:drawableLeft="@drawable/check_selector"
        android:textColor="@color/add_button_text_color_selector"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"/>

</RelativeLayout>